Upgrade dexmaker to AGP 8.5
The intent of this change is to migrate to Android Gradle Plugin 8.5.0,
but as a consequence introduces a few other changes:

* The minimum viable SDK is now 21, as NDK r26 dropped support for 19.
* The minimum Gradle version is now 8, as AGP 8.5.0 requires it.
* The minimum JDK version is now 17, as AGP 8.5.0 requires it.
* The errorprone library was upgraded to provide new JDK classes.
* The publishing scripts were updated to use the new Gradle properties.
* Errorprone fixes were applied to the inline-extended classes.