@@ -4,7 +4,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.1'
+        classpath 'com.android.tools.build:gradle:8.5.0'
     }
 }
 
@@ -16,4 +16,23 @@ allprojects {
 
     group = GROUP_ID
     version = VERSION_NAME
+
+    // The `errorprone` library now needs some additional exports to allow it to
+    // perform reflections. The flags passed to the JVM are from the errorprone
+    // documentation: https://errorprone.info/docs/installation.
+    tasks.withType(JavaCompile) {
+        options.fork = true
+	options.forkOptions.jvmArgs += [
+	   "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+           "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+           "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+           "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+           "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+           "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+           "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+           "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+           "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+           "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"
+	]
+    }
 }
